--- a/main.css
+++ b/main.css
@@ -43,3 +43,13 @@ img{
 .vote--option:hover{
     color: black;
 }
+
+#from--wrapper{
+    max-width: 600px;
+    margin: 0 auto;
+    margin-top: 2em;
+    border: 1px solid #eaeaeb;
+    background-color: #fff;
+    border-radius: 5px;
+    padding: 10px;
+}
